--- a/src/main/resources/static/bp_details.html
+++ b/src/main/resources/static/bp_details.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Blog di Enrico</title>
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <header>
@@ -15,9 +16,8 @@
     </header>
     <nav><a href="./index.html">Torna alla home</a></nav>
     <main>
-     
+      <aside></aside>
     </main>
-    <aside></aside>
     <footer></footer>
   </body>
 </html>
