--- a/src/main/resources/static/bp_new.html
+++ b/src/main/resources/static/bp_new.html
@@ -6,6 +6,8 @@
     <meta name="description" content="A simple BlogPost" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/form.css" />
     <title>Blog di Enrico</title>
   </head>
   <body>
@@ -13,9 +15,7 @@
       <img src="./img/logo-ananas.jpg" height="80" alt="Logo" />
       <h1>Blog di Enrico</h1>
     </header>
-    <nav>
-        <a href="./index.html">Torna alla home</a>
-    </nav>
+    <nav><a href="./index.html">Torna alla home</a></nav>
     <main>
       <form action="submit">
         <label>Title:</label> <input type="text" /> <br />
@@ -24,9 +24,10 @@
         <select name="category" id="">
           <option value="sport">sport</option>
           <option value="scienza">scienza</option>
-          <option value="cultura">cultura</option>
-        </select><br />
+          <option value="cultura">cultura</option> </select
+        ><br />
         <label>Text:</label> <textarea></textarea><br />
+        <input type="submit" />
       </form>
     </main>
     <aside></aside>
