--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,14 +25,14 @@
     <div class="uk-navbar-center">
         <ul class="uk-navbar-nav">
             <li class="uk-active"><a href="#">Home</a></li>
-            <li><a href="bp-new.html">New BlogPost</a></li>
+            <li><a href="../templates/bp-new.html">New BlogPost</a></li>
         </ul>
 
     </div>
 </nav>
 
 <main>
-    <div id="title">
+    <div id="page-title">
         <h4 class="uk-heading-line uk-text-center" id="home-title"><span>Home</span></h4>
     </div>
     <div class="article-cnt content">
